--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
         <title>Basic Tetris</title>
     </head>
     <body>
-        <h3>Score:<span id="score">0</span></h3>
+        <h2 style="text-align: center">Basic Tetris<span id="title"></span></h2>
+        <h3 style="text-align: center">Score: <span id="score">0</span></h3>
+        <h4 style="text-align: center">Lines: <span id="lines">0</span></h4>
+
+        <div class="button-wrap">
         <button id="start-button">Start/Pause</button>
+        </div>
+        
         <div class="container">
         <div class="grid">
             <div></div>
