center style and faster drop

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <body>
         <h2 style="text-align: center">Basic Tetris<span id="title"></span></h2>
         <h3 style="text-align: center">Score: <span id="score">0</span></h3>
-        <h4 style="text-align: center">Lines: <span id="lines">0</span></h4>
+        <!-- <h4 style="text-align: center">Lines: <span id="lines">0</span></h4> -->
 
         <div class="button-wrap">
         <button id="start-button">Start/Pause</button>
         </div>
-        
+        <h3 style="text-align: center"><span id="space"></span></h3>
         <div class="container">
         <div class="grid">
             <div></div>
